--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,19 +1,23 @@
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-3">
+    <div class="pt">
+      <page-title></page-title>
+    </div>
+      <div class="movies">
         <movie-list></movie-list>
       </div>
-  
-      <div class="col-3">
-        <p>No content here yet...</p>
+        
+      <div class="photos">
+        <fav-photos></fav-photos>     
+        
       </div>
   
-      <div class="col-3">
-        <p>No content here yet...</p>
+      <div class="chores">
+         <chores-list></chores-list>   
+
       </div>
-    </div>
+    
   </div>
   
-  <chores-list></chores-list>
+  <fav-links></fav-links>
   
-  <fav-photos></fav-photos>
+  
