--- a/lesson1/exercises/src/app/chores-list/chores-list.component.html
+++ b/lesson1/exercises/src/app/chores-list/chores-list.component.html
@@ -1,8 +1,10 @@
 <div class="chores">
    <h3>Today's Chores</h3>
+   <div id="lis">
    <ul>
       <li>{{chores[0]}}</li>
       <li>{{chores[1]}}</li>
       <li>{{chores[2]}}</li>
    </ul>
+</div>
 </div>
