--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -2,19 +2,19 @@
     <div class="pt">
       <page-title></page-title>
     </div>
+    <div class="box">
       <div class="movies">
         <movie-list></movie-list>
       </div>
-        
-      <div class="photos">
+        <div class="photos">
         <fav-photos></fav-photos>     
-        
-      </div>
+         </div>
   
       <div class="chores">
          <chores-list></chores-list>   
 
       </div>
+    </div>
     
   </div>
   
