--- a/lesson1/exercises/src/app/app.component.css
+++ b/lesson1/exercises/src/app/app.component.css
@@ -2,6 +2,10 @@
     text-align: center;
     font-size:32px ;
 }
+.box{
+    display: flex;
+    padding: 20px;
+}
 .photos{
     justify-content: center;
 }
